Changing zfs_flush to zfs-flush.

--- a/zfs-flush.service
+++ b/zfs-flush.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Force ZFS sync, flush caches, and block devices
+Description=Force ZFS sync and flush caches
 Wants=zfs-flush.timer
 
 [Service]
